feat: response refactor