@@ -2,6 +2,7 @@ package com.karaoke.backend.controllers;
 
 import com.karaoke.backend.dtos.YouTubeVideoDTO;
 import com.karaoke.backend.services.YoutubeService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -9,11 +10,11 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 
 @RestController
+@RequiredArgsConstructor
 @RequestMapping("/api/resolve-video")
 public class YouTubeController {
 
-    @Autowired
-    private YoutubeService youTubeService;
+    private final YoutubeService youTubeService;
 
 
     @GetMapping
@@ -22,9 +23,8 @@ public class YouTubeController {
         List<YouTubeVideoDTO> validResults = youTubeService.searchVideos(query);
 
         if (!validResults.isEmpty()) {
-            YouTubeVideoDTO bestVideo = validResults.get(0);
-            
-            
+            YouTubeVideoDTO bestVideo = validResults.getFirst();
+
             return ResponseEntity.ok(bestVideo);
         } else {
             return ResponseEntity.notFound().build(); 
